Gitlab -> GitHub relocation

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ builds: # https://goreleaser.com/customization/#Builds
       - amd64
     env:
       - CGO_ENABLED=0
-      - export GITLAB_TOKEN=EwxxQnSTDAfEXsCiRBxX
+      - export GITHUB_TOKEN=
 archives:
 - replacements:
     darwin: Darwin
