--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,6 +14,7 @@ builds: # https://goreleaser.com/customization/#Builds
     goos:
       - windows
       - linux
+      - darwin
     goarch:
       - amd64
     env:
