--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,7 +14,7 @@ builds: # https://goreleaser.com/customization/#Builds
     goos:
       - windows
       - linux
-      - darwin
+      # - darwin
     goarch:
       - amd64
     env:
