--- a/examples/triceDemoF030R8/MDK-ARM/triceDemoF030R8.uvprojx
+++ b/examples/triceDemoF030R8/MDK-ARM/triceDemoF030R8.uvprojx
@@ -412,6 +412,11 @@
               <FileType>1</FileType>
               <FilePath>../Src/stm32f0xx_it.c</FilePath>
             </File>
+            <File>
+              <FileName>printf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\printf.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
