--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,8 +42,8 @@ builds:
     goarch:
       - 386
       - amd64
-      - arm
-      - arm64
+      #- arm
+      #- arm64
 
     # GOARM to build for when GOARCH is arm.
     # For more info refer to: https://golang.org/doc/install/source#environment
