--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-testdata/triceDemoF030R8/MDK-ARM/triceDemoF030R8/
+
+examples/generatedDemoF030R8/.mxproject
+examples/generatedDemoF030R8/MDK-ARM/EventRecorderStub.scvd
+examples/generatedDemoF030R8/MDK-ARM/*.uvguix.ms
+examples/generatedDemoF030R8/MDK-ARM/triceDemoF030R8/*
+examples/generatedDemoF030R8/MDK-ARM/*.lst
+examples/generatedDemoF030R8/MDK-ARM/RTE/*
+examples/generatedDemoF030R8/MDK-ARM/RTE/*/*
+examples/generatedDemoF030R8/MDK-ARM/DebugConfig/*
+
+examples/triceDemoF030R8/.mxproject
+examples/triceDemoF030R8/MDK-ARM/EventRecorderStub.scvd
+examples/triceDemoF030R8/MDK-ARM/*.uvguix.ms
+examples/triceDemoF030R8/MDK-ARM/triceDemoF030R8/*
+examples/triceDemoF030R8/MDK-ARM/*.lst
+examples/triceDemoF030R8/MDK-ARM/RTE/*
+examples/triceDemoF030R8/MDK-ARM/RTE/*/*
+examples/triceDemoF030R8/MDK-ARM/DebugConfig/*
