--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,11 +34,11 @@
             "env": {},
             "args": ["log",
                      "-port",
-                     "COM10",
+                     "COM16",
                      "-baud",
                      "115200",
                      "-list",
-                     "C:/GitRepos/trice/examples/triceDemoF030R8/MDK-ARM/til.json"
+                     "none"
             ]
         },
         {
