--- a/examples/reCalDemoF030R8/MDK-ARM/reCalDemoF030R8.uvprojx
+++ b/examples/reCalDemoF030R8/MDK-ARM/reCalDemoF030R8.uvprojx
@@ -460,42 +460,12 @@
             <File>
               <FileName>trice.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\src.C\trice.c</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>lib</GroupName>
-          <Files>
-            <File>
-              <FileName>Fifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\lib\Fifo.c</FilePath>
-            </File>
-            <File>
-              <FileName>msTicks.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\lib\msTicks.c</FilePath>
-            </File>
-            <File>
-              <FileName>printf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\lib\printf.c</FilePath>
-            </File>
-            <File>
-              <FileName>RcPack.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\lib\RcPack.c</FilePath>
-            </File>
-            <File>
-              <FileName>RcRegistry.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\lib\RcRegistry.c</FilePath>
+              <FilePath>..\Src\trice.c</FilePath>
             </File>
             <File>
               <FileName>triceCheck.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\lib\triceCheck.c</FilePath>
+              <FilePath>..\Src\triceCheck.c</FilePath>
             </File>
           </Files>
         </Group>
