--- a/examples/triceDemoF030R8/MDK-ARM/triceDemoF030R8.uvprojx
+++ b/examples/triceDemoF030R8/MDK-ARM/triceDemoF030R8.uvprojx
@@ -72,7 +72,7 @@
           <BeforeMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -src ..</UserProg1Name>
+            <UserProg1Name>trice u -src .. -list ../../til.json -v</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -82,7 +82,7 @@
           <AfterMake>
             <RunUserProg1>0</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice log -port COM26 -baud 115200</UserProg1Name>
+            <UserProg1Name></UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -457,11 +457,6 @@
         <Group>
           <GroupName>lib</GroupName>
           <Files>
-            <File>
-              <FileName>printf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\printf.c</FilePath>
-            </File>
             <File>
               <FileName>trice.c</FileName>
               <FileType>1</FileType>
