--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,6 +36,16 @@
             ]
         },
         {
+            "name": "Launch trice displayServer",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["ds"
+            ]
+        },
+        {
             "name": "Launch trice log -port",
             "type": "go",
             "request": "launch",
