--- a/examples/triceDemo_NUCLEO-F070RB/MDK-ARM/triceDemo_NUCLEO-F070RB.uvprojx
+++ b/examples/triceDemo_NUCLEO-F070RB/MDK-ARM/triceDemo_NUCLEO-F070RB.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls></MiscControls>
               <Define>USE_FULL_LL_DRIVER,HSE_VALUE=8000000,HSE_STARTUP_TIMEOUT=100,LSE_STARTUP_TIMEOUT=5000,LSE_VALUE=32768,HSI_VALUE=8000000,LSI_VALUE=40000,VDD_VALUE=3300,PREFETCH_ENABLE=1,INSTRUCTION_CACHE_ENABLE=0,DATA_CACHE_ENABLE=0,STM32F070xB</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;   C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc;   C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Device/ST/STM32F0xx/Include;   C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>../Inc;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Device/ST/STM32F0xx/Include;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Include;..\..\..\srcTrice.C</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -392,21 +392,6 @@
         <Group>
           <GroupName>Application/User</GroupName>
           <Files>
-            <File>
-              <FileName>trice.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\trice.c</FilePath>
-            </File>
-            <File>
-              <FileName>triceCheck.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\triceCheck.c</FilePath>
-            </File>
-            <File>
-              <FileName>xteaCrypto.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\xteaCrypto.c</FilePath>
-            </File>
             <File>
               <FileName>main.c</FileName>
               <FileType>1</FileType>
@@ -466,6 +451,26 @@
               <FileName>system_stm32f0xx.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/system_stm32f0xx.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Trice</GroupName>
+          <Files>
+            <File>
+              <FileName>trice.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\trice.c</FilePath>
+            </File>
+            <File>
+              <FileName>triceCheck.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\triceCheck.c</FilePath>
+            </File>
+            <File>
+              <FileName>xteaCrypto.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\xteaCrypto.c</FilePath>
             </File>
           </Files>
         </Group>
