--- a/examples/triceDemo_NUCLEO-F030R8/MDK-ARM/triceDemo_NUCLEO-F030R8.uvprojx
+++ b/examples/triceDemo_NUCLEO-F030R8/MDK-ARM/triceDemo_NUCLEO-F030R8.uvprojx
@@ -70,9 +70,9 @@
             <nStopU2X>0</nStopU2X>
           </BeforeCompile>
           <BeforeMake>
-            <RunUserProg1>0</RunUserProg1>
+            <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -src .. -list ../../til.json</UserProg1Name>
+            <UserProg1Name>trice u -src .. -src ../../../srcTrice.C -list ../../til.json -v</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -312,7 +312,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
