intermediate example state

--- a/examples/generatedDemo_NUCLEO-F030R8_LL_MDK-ARM/MDK-ARM/generatedDemo_NUCLEO-F030R8_LL_MDK-ARM.uvprojx
+++ b/examples/generatedDemo_NUCLEO-F030R8_LL_MDK-ARM/MDK-ARM/generatedDemo_NUCLEO-F030R8_LL_MDK-ARM.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>generatedDemo_NUCLEO-F030R8_LL_MDK-ARM</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
