--- a/examples/triceDemo_NUCLEO-F070RB_HAL_MDK-ARM/MDK-ARM/triceDemo_NUCLEO-F070RB_HAL_MDK-ARM.uvprojx
+++ b/examples/triceDemo_NUCLEO-F070RB_HAL_MDK-ARM/MDK-ARM/triceDemo_NUCLEO-F070RB_HAL_MDK-ARM.uvprojx
@@ -537,6 +537,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\xteaCrypto.c</FilePath>
             </File>
+            <File>
+              <FileName>triceWrite.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\triceWrite.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
