TRICE_VARIANT as project settings

--- a/examples/triceDemo_NUCLEO-F030R8_HAL_MDK-ARM/MDK-ARM/triceDemo_NUCLEO-F030R8_HAL_MDK-ARM.uvprojx
+++ b/examples/triceDemo_NUCLEO-F030R8_HAL_MDK-ARM/MDK-ARM/triceDemo_NUCLEO-F030R8_HAL_MDK-ARM.uvprojx
@@ -336,7 +336,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>USE_HAL_DRIVER,STM32F030x8</Define>
+              <Define>TRICE_VARIANT=STM32_HAL,USE_HAL_DRIVER,STM32F030x8</Define>
               <Undefine></Undefine>
               <IncludePath>../Inc;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc/Legacy;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Device/ST/STM32F0xx/Include;C:/Users/ms/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Include;..\..\..\srcTrice.C</IncludePath>
             </VariousControls>
